# apllodb

./: .gitignore  Cargo.toml  Makefile.toml  Procfile  README.md  RustConfig  netlify.toml
apllo-shared-components/: Cargo.toml  README.md
apllo-shared-components/src/: data_structure.rs  error.rs  lib.rs
apllo-shared-components/src/data_structure/: column_constraint_kind.rs  column_constraints.rs  column_definition.rs  column_name.rs  data_type.rs  data_type_kind.rs  short_name.rs  table_constraint_kind.rs  table_constraints.rs  table_name.rs  validation_helper.rs
apllo-shared-components/src/error/: aux.rs  kind.rs  sqlstate.rs
apllo-shared-components/src/test_support/: factory_macro.rs
apllo-shared-components/tests/: apllo_error.rs
apllo-storage-manager-interface/: Cargo.toml  README.md
apllo-storage-manager-interface/src/: access_methods.rs  lib.rs  test_support.rs  versions.rs
apllo-storage-manager-interface/src/access_methods/: ddl.rs
apllo-storage-manager-interface/src/test_support/: factory_macro.rs
apllo-storage-manager-interface/src/versions/: marker.rs  version.rs  version_set.rs
apllodb-cli/: Cargo.toml
apllodb-cli/src/: cmd_processor.rs  main.rs
apllodb-cli/src/cmd_processor/: record_cli_display.rs
apllodb-client/: Cargo.toml
apllodb-client/src/: cmd_processor.rs  main.rs  shell.rs
apllodb-immutable-schema-engine/: .gitignore  Cargo.toml  README.md
apllodb-immutable-schema-engine-application/: Cargo.toml  README.md
apllodb-immutable-schema-engine-application/src/: lib.rs  test_support.rs  use_case.rs
apllodb-immutable-schema-engine-application/src/use_case/: transaction.rs
apllodb-immutable-schema-engine-domain/: Cargo.toml  README.md
apllodb-immutable-schema-engine-domain/src/: abstract_types.rs  entity.rs  lib.rs  query_result.rs  row.rs  row_iter.rs  row_projection_result.rs  row_selection_plan.rs  test_support.rs  traits.rs  transaction.rs  version.rs  version_revision_resolver.rs  vtable.rs
apllodb-immutable-schema-engine-domain/src/query/: projection.rs
apllodb-immutable-schema-engine-infra/: Cargo.toml  README.md
apllodb-immutable-schema-engine-infra/src/: access_methods.rs  engine.rs  error.rs  external_interface.rs  immutable_schema_row_iter.rs  lib.rs  sqlite.rs  test_support.rs  transaction.rs  tx_repo.rs
apllodb-immutable-schema-engine-infra/tests/: test_generic_program.rs
apllodb-immutable-schema-engine-interface-adapter/: Cargo.toml
apllodb-immutable-schema-engine-interface-adapter/src/: lib.rs  transaction.rs
apllodb-immutable-schema-engine/application/: Cargo.toml
apllodb-immutable-schema-engine/domain/: Cargo.toml
apllodb-immutable-schema-engine/infra/: Cargo.toml
apllodb-immutable-schema-engine/interface-adapter/: Cargo.toml
apllodb-immutable-schema-engine/src/: access_methods.rs  database.rs  latch.rs  lib.rs  row.rs  storage.rs  table.rs  test_support.rs  transaction.rs  version.rs
apllodb-immutable-schema-engine/tests/: immutable_ddl.rs  pk.rs  standard_sql.rs  test_support.rs  transaction.rs  use_apllodb_immutable_schema_engine.rs
apllodb-query-processor/: Cargo.toml
apllodb-query-processor/src/: lib.rs  query.rs  query_executor.rs  query_plan.rs  test_support.rs
apllodb-rpc-interface/: Cargo.toml
apllodb-rpc-interface/src/: error.rs  lib.rs  response.rs
apllodb-server/: Cargo.toml
apllodb-server/fuzz/: Cargo.toml
apllodb-server/src/: apllodb_server.rs  lib.rs  main.rs  test_support.rs
apllodb-server/src/apllodb_server/: response.rs  (+1 more)
apllodb-server/tests/: database.rs  dml.rs  full_field_reference.rs  func_alter_table.rs  func_database.rs  func_dml.rs  func_full_field_reference.rs  func_immutable_ddl.rs  func_insert.rs  func_select.rs  func_sql_type.rs  func_transaction.rs  func_update.rs  prop_sql_type.proptest-regressions  prop_sql_type.rs  query.rs  scenario_010_pre_demo.rs  sql_type.rs  transaction.rs
apllodb-shared-components/: Cargo.toml  README.md
apllodb-shared-components/src/: ast_translator.rs  data_structure.rs  error.rs  expression.rs  helper.rs  lib.rs  record_index.rs  record_schema.rs  records.rs  schema.rs  table_column_name.rs  test_support.rs  traits.rs  validation_helper.rs  value.rs
apllodb-shared-components/tests/: apllodb_error.rs
apllodb-sql-parser/: Cargo.toml  README.md
apllodb-sql-parser/src/: apllodb_sql_parser.rs  lib.rs  parser_impl.rs  parser_interface.rs  test_support.rs
apllodb-sql-parser/tests/: alter_table.rs  apllodb_ast.rs  apllodb_sql_parser_error.rs  parse_abort_transaction.rs  parse_alter_table.rs  parse_begin_transaction.rs  parse_commit_transaction.rs  parse_create_database.rs  parse_create_table.rs  parse_delete.rs  parse_drop_table.rs  parse_expression.rs  parse_insert.rs  parse_select.rs  parse_update.rs  parse_use_database.rs  version-numbers.rs
apllodb-sql-processor/: Cargo.toml
apllodb-sql-processor/src/: aliaser.rs  ast_translator.rs  attribute.rs  condition.rs  correlation.rs  ddl.rs  field.rs  lib.rs  local_test_support.rs  modification.rs  query.rs  records.rs  sql_processor.rs  test_support.rs
apllodb-storage-engine-interface/: Cargo.toml  README.md
apllodb-storage-engine-interface/src/: access_methods.rs  alias_def.rs  alter_table_action.rs  database.rs  database_methods.rs  ddl_methods.rs  dml_methods.rs  lib.rs  projection_query.rs  query.rs  row.rs  row_projection_query.rs  row_selection_query.rs  rows.rs  single_table_condition.rs  table_column_name.rs  table_column_reference.rs  test_support.rs  transaction.rs  transaction_methods.rs
apllodb-storage-engine-interface/tests/: impl_storage_engine.rs  in_process_client.rs  in_process_client_server.rs  test_generic_program.rs  test_import.rs
apllodb-storage-manager-interface/: Cargo.toml  README.md
apllodb-storage-manager-interface/src/: access_methods.rs  database.rs  helper.rs  lib.rs  table.rs  transaction.rs  version.rs
apllodb-storage-manager-interface/tests/: impl_storage_engine.rs
apllodb-test-support/: Cargo.toml
apllodb-test-support/src/: lib.rs  setup.rs
doc/: Cargo.toml  README.md  immutable-ddl-demo.sql
doc/src/: main.rs
(+567 files in other folders)
