[workspace]

members = [
  "apllodb-shared-components",
  "apllodb-sql-parser",
  "apllodb-sql-processor",
  "apllodb-storage-engine-interface", 
  
  # Immutable Schema Storage Engine.
  # Has "Clean Architecture"-like structure.
  "apllodb-immutable-schema-engine",
  "apllodb-immutable-schema-engine-domain",
  "apllodb-immutable-schema-engine-application",
  "apllodb-immutable-schema-engine-infra",

  "apllodb-server",

  "apllodb-cli-client",

  "apllodb-test-support",
]
