[package]
name = "apllo-storage-manager-interface"
version = "0.1.0"
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
description = "APLLO's storage manager interface."
license = "(TBD)"
readme = "README.md"
keywords = ["apllo"]
categories = ["database", "database-implementations"]
repository = "https://github.com/darwin-education/apllo"

[dependencies]
apllo-sql-parser = { git = "ssh://git@github.com/darwin-education/apllo.git", branch = "syntax-for-0.1.0" }

[dev-dependencies]
version-sync = "0.9"
