[package]
name = "apllo-storage-manager-interface"
version = "0.1.0"
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
description = "APLLO's storage manager interface."
license = "(TBD)"
readme = "README.md"
keywords = ["apllo"]
categories = ["database", "database-implementations"]
repository = "https://github.com/darwin-education/apllo"

[dependencies]
apllo-shared-components = { path = "../apllo-shared-components" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
version-sync = "0.9"
