[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
name = "apllodb-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apllodb-server = {path = "../apllodb-server"}

derive-new = "0.5"

env_logger = "0.8"
log = "0.4"

clap = "2.33"

rustyline = "8.1"

dirs = "3.0"

async-std = {version = "1.9", features = ["attributes"]}
