[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
name = "apllodb-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apllodb-rpc-interface = {path = "../apllodb-rpc-interface"}
apllodb-shared-components = {path = "../apllodb-shared-components"}

env_logger = "0.8"
log = "0.4"

clap = "2.33"

futures = "0.3"
serde = {version = "1.0"}
tarpc = {version = "0.24", features = ["full"]}
tokio = {version = "1", features = ["full"]}
tokio-serde = {version = "0.8", features = ["bincode"]}
