[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
name = "apllodb-immutable-schema-engine-application"
license = "MIT OR Apache-2.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apllodb-immutable-schema-engine-domain = {path = "../apllodb-immutable-schema-engine-domain"}

apllodb-storage-engine-interface = {path = "../apllodb-storage-engine-interface"}

apllodb-shared-components = {path = "../apllodb-shared-components"}

derive-new = "0.5"

async-trait = "0.1"

env_logger = "0.8"
log = "0.4"
