[package]
name = "apllodb-immutable-schema-engine-domain"
version = "0.1.0"
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apllodb-shared-components = { path = "../apllodb-shared-components" }

apllodb-storage-engine-interface = { path = "../apllodb-storage-engine-interface" }

derive-new = "0.5"

env_logger = "0.8"
log = "0.4"

serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8"
