[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
name = "apllodb-immutable-schema-engine-domain"
license = "MIT OR Apache-2.0"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apllodb-shared-components = {path = "../apllodb-shared-components"}
apllodb-storage-engine-interface = {path = "../apllodb-storage-engine-interface"}

derive-new = "0.5"

async-trait = "0.1"

env_logger = "0.8"
log = "0.4"

serde = {version = "1.0", features = ["derive"]}

[dev-dependencies]
apllodb-shared-components = {path = "../apllodb-shared-components", features = ["test-support"]}
apllodb-test-support = {path = "../apllodb-test-support"}

ctor = "0.1"

pretty_assertions = "0.7"
rand = "0.8"
