[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
name = "apllodb-immutable-schema-engine-infra"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apllodb-immutable-schema-engine-application = {path = "../apllodb-immutable-schema-engine-application"}
apllodb-immutable-schema-engine-domain = {path = "../apllodb-immutable-schema-engine-domain"}

apllodb-storage-engine-interface = {path = "../apllodb-storage-engine-interface"}

apllodb-shared-components = {path = "../apllodb-shared-components"}

# Only SqliteTx uses this to deserialize ActiveVersion from SQLite's sqlite_master table.
apllodb-sql-parser = {path = "../apllodb-sql-parser"}

chrono = "0.4"

derive-new = "0.5"

async-trait = "0.1"

env_logger = "0.8"
log = "0.4"

libsqlite3-sys = "0.20"
sqlx = {git = "https://github.com/lumeohq/sqlx", branch = "tokio-1.0", features = ["sqlite", "runtime-tokio-rustls"]}# To use tokio 1.0

serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"

generational-arena = "0.2.8"

futures = "0.3"
tarpc = {version = "0.24", features = ["full"]}
tokio = {version = "1", features = ["full"]}
tokio-serde = {version = "0.8", features = ["bincode"]}

once_cell = "1.5"

[dev-dependencies]
pretty_assertions = "0.6"
rand = "0.8"
uuid = {version = "0.8", features = ["v4"]}
version-sync = "0.9"
