[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
name = "apllodb-immutable-schema-engine-infra"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-support = []

[dependencies]
apllodb-immutable-schema-engine-application = {path = "../apllodb-immutable-schema-engine-application"}
apllodb-immutable-schema-engine-domain = {path = "../apllodb-immutable-schema-engine-domain", features = ["test-support"]}

apllodb-storage-engine-interface = {path = "../apllodb-storage-engine-interface"}

apllodb-shared-components = {path = "../apllodb-shared-components"}

# Only SqliteTx uses this to deserialize ActiveVersion from SQLite's sqlite_master table.
apllodb-sql-parser = {path = "../apllodb-sql-parser"}

chrono = "0.4"

derive-new = "0.5"

async-trait = "0.1"

env_logger = "0.8"
log = "0.4"

libsqlite3-sys = "0.20"
sqlx = {version = "0.4", features = ["sqlite", "runtime-async-std-native-tls"]}

serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"

generational-arena = "0.2.8"

futures = "0.3"

[dev-dependencies]
pretty_assertions = "0.6"
rand = "0.8"
version-sync = "0.9"
