[package]
name = "apllodb-immutable-schema-engine-interface-adapter"
version = "0.1.0"
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apllodb-immutable-schema-engine-domain = { path = "../apllodb-immutable-schema-engine-domain" }
apllodb-immutable-schema-engine-application = { path = "../apllodb-immutable-schema-engine-application" }
