[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
name = "apllodb-immutable-schema-engine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apllodb-immutable-schema-engine-infra = {path = "../apllodb-immutable-schema-engine-infra"}
apllodb-shared-components = {path = "../apllodb-shared-components"}
apllodb-storage-engine-interface = {path = "../apllodb-storage-engine-interface"}

env_logger = "0.8"
log = "0.4"

[dev-dependencies]
env_logger = "0.8"
log = "0.4"

uuid = {version = "0.8", features = ["v4"]}

pretty_assertions = "0.6"

futures = "0.3"
tokio = {version = "1", features = ["full"]}
