[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
name = "apllodb-immutable-schema-engine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apllodb-immutable-schema-engine-infra = {path = "../apllodb-immutable-schema-engine-infra"}
apllodb-shared-components = {path = "../apllodb-shared-components"}
apllodb-storage-engine-interface = {path = "../apllodb-storage-engine-interface"}

env_logger = "0.8"
log = "0.4"

[dev-dependencies]
apllodb-immutable-schema-engine-infra = {path = "../apllodb-immutable-schema-engine-infra", features = ["test-support"]}
apllodb-shared-components = {path = "../apllodb-shared-components", features = ["test-support"]}
apllodb-storage-engine-interface = {path = "../apllodb-storage-engine-interface", features = ["test-support"]}
apllodb-test-support = {path = "../apllodb-test-support"}

ctor = "0.1"

env_logger = "0.8"
log = "0.4"

pretty_assertions = "0.6"

futures = "0.3"

async-std = {version = "1.9", features = ["attributes"]}
