[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
categories = ["database", "database-implementations"]
description = "TBD"
edition = "2018"
keywords = ["apllodb"]
license = "(TBD)"
name = "apllodb-query-processor"
readme = "README.md"
repository = "https://github.com/darwin-education/apllodb"
version = "0.1.0"

[dependencies]
serde = {version = "1.0", features = ["derive"]}

derive-new = "0.5"

env_logger = "0.8"
log = "0.4"
