[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
name = "apllodb-server"
version = "0.1.0"

[features]
test-support = ["apllodb-test-support", "apllodb-immutable-schema-engine-infra", "once_cell"]

[dependencies]
apllodb-immutable-schema-engine = {path = "../apllodb-immutable-schema-engine"}
apllodb-shared-components = {path = "../apllodb-shared-components"}
apllodb-sql-processor = {path = "../apllodb-sql-processor"}
apllodb-storage-engine-interface = {path = "../apllodb-storage-engine-interface"}

apllodb-immutable-schema-engine-infra = {path = "../apllodb-immutable-schema-engine-infra", optional = true}
apllodb-test-support = {path = "../apllodb-test-support", optional = true}

env_logger = "0.8"
log = "0.4"

derive-new = "0.5"

futures = "0.3"
serde = {version = "1.0"}

once_cell = {version = "1.7", optional = true}

[dev-dependencies]
apllodb-immutable-schema-engine-infra = {path = "../apllodb-immutable-schema-engine-infra", features = ["test-support"]}
apllodb-server = {path = ".", features = ["test-support"]}
apllodb-shared-components = {path = "../apllodb-shared-components", features = ["test-support"]}
apllodb-sql-processor = {path = "../apllodb-sql-processor", features = ["test-support"]}
apllodb-storage-engine-interface = {path = "../apllodb-storage-engine-interface", features = ["test-support"]}
apllodb-test-support = {path = "../apllodb-test-support"}

ctor = "0.1"

async-std = {version = "1.9", features = ["attributes"]}

pretty_assertions = "0.7"

itertools = "0.10"
