[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
categories = ["database", "database-implementations"]
description = "TBD"
edition = "2018"
keywords = ["apllodb"]
license = "(TBD)"
name = "apllodb-shared-components"
readme = "README.md"
repository = "https://github.com/darwin-education/apllodb"
version = "0.1.0"

[features]
test-support = []

[dependencies]
bincode = "1.3"
serde = {version = "1.0", features = ["derive"]}

derive-new = "0.5"

fastrand = "1.4"

[dev-dependencies]
version-sync = "0.9"
