[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
categories = ["database", "database-implementations"]
description = "TBD"
edition = "2018"
keywords = ["apllodb"]
license = "(TBD)"
name = "apllodb-shared-components"
readme = "README.md"
repository = "https://github.com/darwin-education/apllodb"
version = "0.1.0"

[features]
test-support = ["rand", "once_cell"]

[dependencies]
apllodb-sql-parser = {path = "../apllodb-sql-parser"}

serde = {version = "1.0", features = ["derive"]}

derive-new = "0.5"

env_logger = "0.8"
log = "0.4"

fastrand = "1.4"

rand = {version = "0.8", optional = true}

once_cell = {version = "1.5", optional = true}

[dev-dependencies]
apllodb-shared-components = {path = ".", features = ["test-support"]}
apllodb-sql-parser = {path = "../apllodb-sql-parser", features = ["test-support"]}
apllodb-test-support = {path = "../apllodb-test-support"}

ctor = "0.1"

version-sync = "0.9"

pretty_assertions = "0.6"
