[package]
name = "apllodb-sql-parser"
version = "0.1.0"
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
description = "APLLO SQL's parser that inputs APLLO SQL and emit APLLO AST."
license = "(TBD)"
readme = "README.md"
keywords = ["apllo", "parser", "sql"]
categories = ["parser-implementations", "database", "database-implementations"]
repository = "https://github.com/darwin-education/apllo"

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
version-sync = "0.9"
