[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
categories = ["database", "database-implementations"]
description = "TBD"
edition = "2018"
keywords = ["apllodb"]
license = "(TBD)"
name = "apllodb-sql-processor"
readme = "README.md"
repository = "https://github.com/darwin-education/apllodb"
version = "0.1.0"

[dependencies]
apllodb-shared-components = {path = "../apllodb-shared-components"}
apllodb-sql-parser = {path = "../apllodb-sql-parser", features = ["serde"]}
apllodb-storage-engine-interface = {path = "../apllodb-storage-engine-interface"}

serde = {version = "1.0", features = ["derive"]}

derive-new = "0.5"

async-recursion = "0.3"

env_logger = "0.8"
log = "0.4"

[dev-dependencies]
apllodb-immutable-schema-engine-infra = {path = "../apllodb-immutable-schema-engine-infra", features = ["test-support"]}
apllodb-shared-components = {path = "../apllodb-shared-components", features = ["test-support"]}
apllodb-storage-engine-interface = {path = "../apllodb-storage-engine-interface", features = ["test-support"]}
apllodb-test-support = {path = "../apllodb-test-support"}

ctor = "0.1"

mockall = "0.9"

pretty_assertions = "0.6"

async-std = {version = "1.9", features = ["attributes"]}

futures = "0.3"

once_cell = "1.7"
