[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
categories = ["database", "database-implementations"]
description = "apllodb's storage engine interface."
edition = "2018"
keywords = ["apllodb"]
license = "(TBD)"
name = "apllodb-storage-engine-interface"
readme = "README.md"
repository = "https://github.com/darwin-education/apllodb"
version = "0.1.0"

[features]
test-support = ["mockall"]

[dependencies]
apllodb-shared-components = {path = "../apllodb-shared-components"}

serde = {version = "1.0", features = ["derive"]}

futures = "0.3"

mockall = {version = "0.9", optional = true}

[dev-dependencies]
apllodb-storage-engine-interface = {path = ".", features = ["test-support"]}

version-sync = "0.9"

futures = "0.3"
