[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
categories = ["database", "database-implementations"]
description = "apllodb's storage engine interface."
edition = "2018"
keywords = ["apllodb"]
license = "MIT OR Apache-2.0"
name = "apllodb-storage-engine-interface"
readme = "README.md"
repository = "https://github.com/darwin-education/apllodb"
version = "0.1.0"

[features]
test-support = ["mockall", "env_logger", "log"]

[dependencies]
apllodb-shared-components = {path = "../apllodb-shared-components"}

serde = {version = "1.0", features = ["derive"]}

derive-new = "0.5"

futures = "0.3"

sorted-vec = "0.5"

mockall = {version = "0.9", optional = true}

env_logger = {version = "0.8", optional = true}
log = {version = "0.4", optional = true}

[dev-dependencies]
apllodb-shared-components = {path = "../apllodb-shared-components", features = ["test-support"]}
apllodb-storage-engine-interface = {path = ".", features = ["test-support"]}
apllodb-test-support = {path = "../apllodb-test-support"}

ctor = "0.1"

version-sync = "0.9"

futures = "0.3"
