[package]
name = "apllodb-storage-manager-interface"
version = "0.1.0"
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
description = "apllodb's storage manager interface."
license = "(TBD)"
readme = "README.md"
keywords = ["apllodb"]
categories = ["database", "database-implementations"]
repository = "https://github.com/darwin-education/apllodb"

[dependencies]
apllodb-shared-components = { path = "../apllodb-shared-components" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
version-sync = "0.9"
