[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
edition = "2018"
name = "apllodb-test-support"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
setup-all = ["ctor"]
setup-test_logger = ["ctor"]

[dependencies]
env_logger = "0.8"
log = "0.4"

ctor = {version = "0.1", optional = true}
